# SmarterRouter

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEEPDIVE.md  Dockerfile  ENV_DEFAULT  LICENSE  README.md  SECURITY.md  artificial_analysis_models.example.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_smarterrouter_v2.sh  test_vram.sh
data/: artificial_analysis_models.example.yaml
docs/: api.md  backends.md  benchmarks.md  configuration.md  docker-compose.amd.yml  docker-compose.apple.md  docker-compose.intel.yml  docker-compose.multi-gpu.yml  docker-compose.nvidia.yml  installation.md  performance.md  troubleshooting.md
docs/examples/: README.md  client-integration.md  openwebui-integration.md  production-deployment.md
router/: benchmark_db.py  benchmark_sync.py  client.py  config.py  database.py  judge.py  logging_config.py  metrics.py  models.py  profiler.py  prompts.py  router.py  schemas.py  skills.py  vram_manager.py  vram_monitor.py
router/backends/: __init__.py  base.py  llama_cpp.py  ollama.py  openai.py
tests/: conftest.py  test_amd_backend.py  test_backend_contract.py  test_benchmark_sync.py  test_caching.py  test_client.py  test_config.py  test_database.py  test_edge_cases.py  test_embeddings_feedback.py  test_integration.py  test_integration_extended.py  test_judge.py  test_judge_markdown.py  test_llama_cpp_backend.py  test_ollama_backend.py  test_openai_backend.py  test_profiler.py  test_providers.py  test_router.py  test_schemas.py  test_vram_manager.py  test_vram_monitor.py
(+11 files in other folders)
